--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+rasdaemon (0.6.8-1) unstable; urgency=medium
+
+  * Remove the patch in the upstream
+  * d/control: update info and fix typo
+  * Closes: #985678
+
+ -- Taihsiang Ho (tai271828) <e@tai271828.me>  Thu, 09 Jun 2022 20:01:05 +0200
+
 rasdaemon (0.6.7-1) unstable; urgency=medium
 
   * New upstream
